Change .background overflow to 'initial' to fix #about scroll bug

--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -9,7 +9,7 @@
   width: 100%;
   /* height: 110rem; */
   display: block;
-  overflow: auto;
+  overflow: initial;
 }
 
 .title {
@@ -44,7 +44,7 @@
 }
 
 #about {
-  scroll-margin-top: 35rem;
+  scroll-margin-top: 25rem;
 }
 
 @keyframes movedown {
